# lifegamemm

./: .clang-format  CMakeLists.txt  format.sh
src/: CMakeLists.txt  board.cpp  board.h  board_area.cpp  board_area.h  main.cpp  mainwindow.cpp  mainwindow.h  pattern.cpp  pattern.h  resize_dialog.cpp  resize_dialog.h
src/patterns/: cell.cells
